service1/service1-envoy.yaml
static_resources:
  listeners:
    # - address:
    #     socketAddress:
    #       address: "0.0.0.0"
    #       portValue: 53
    #   filterChains:
    #     - filters:
    #       - name: "envoy.tcp_proxy"
    #         config:
    #           stat_prefix: outbound|DNS
    #           cluster: outbound|DNS
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 444
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains:
                        - "*"
                      require_tls: ALL
                      routes:
                        - match:
                            prefix: "/service1"
                          route:
                            cluster: local_service
                        - match:
                            prefix: "/invokeService2"
                          route:
                            cluster: local_service
                http_filters:
                  - name: envoy.router
                    typed_config: {}
          tls_context:
            require_client_certificate: true
            common_tls_context:
              tls_certificate_sds_secret_configs:
                name: server-cert-and-key
                sds_config:
                  path: /opt/envoy-secret.yaml
              validation_context_sds_secret_config:
                name: validation-certs
                sds_config:
                  path: /opt/envoy-validation-secret.yaml
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 446
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: egress_http
                access_log:
                  name: envoy.file_access_log
                  config:
                    path: /dev/stdout
                route_config:
                  name: local_egress_route
                  virtual_hosts:
                  - name: service2
                    domains:
                    - "service2:446"
                    routes:
                    - match:
                        prefix: "/"
                      route:
                        cluster: outbound-cluster
                http_filters:
                  - name: envoy.router
                    typed_config: {}

  clusters:
    - name: local_service
      connect_timeout: 60s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: local_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8081
    # - name: 'outbound|DNS'
    #   connect_timeout: '100s'
    #   type: "ORIGINAL_DST"
    #   lb_policy: ORIGINAL_DST_LB
    - name: outbound-cluster
      connect_timeout: 100s
      # type: original_dst
      # lb_policy: original_dst_lb
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: local_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service2
                      port_value: 445
      tls_context:
        common_tls_context:
          tls_certificate_sds_secret_configs:
            name: server-cert-and-key
            sds_config:
              path: /opt/envoy-secret.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9090
